--- a/src/app/movies/pages/layout-page/layout-page.component.html
+++ b/src/app/movies/pages/layout-page/layout-page.component.html
@@ -7,34 +7,35 @@
         <button mat-icon-button (click)="sidenav.toggle()">
           <mat-icon>menu</mat-icon>
         </button>
-  
-  
+
+
       </mat-toolbar>
-  
+
       <mat-nav-list >
-        <!--Definir enlace y acción de esconder menú-->
+
         <mat-list-item  *ngFor="let item of sidebarItems " (click)="sidenav.toggle()"
           [routerLink]=item.url>
           <mat-icon matListItemIcon >{{item.icon}}</mat-icon>
           {{item.label}}
         </mat-list-item>
       </mat-nav-list>
-  
+
     </mat-sidenav>
-  
+
     <mat-toolbar color="primary">
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
       <span class="spacer"></span>
-      <span>{{user?.usuario}}</span>
+      <!-- <span>{{user?.usuario}}</span>
       <button mat-button (click)="onLogout()">
         Logout
-      </button>
+      </button> -->
     </mat-toolbar>
-  
+
     <div class="container p-2">
       <router-outlet></router-outlet>
     </div>
-  
+
   </mat-sidenav-container>
+
