--- a/src/app/movies/pages/search-page/search-page.component.html
+++ b/src/app/movies/pages/search-page/search-page.component.html
@@ -1,1 +1,16 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+  <h3>Buscador</h3>
+  <mat-form-field>
+    <mat-label>Buscador de Películas</mat-label>
+    <input
+      type="text"
+      matInput
+      [formControl]="searchInput"
+      (input)="searchMovie()">
+
+        <mat-option *ngFor="let movie of peliculas" [value]="movie.id">
+          {{movie.title}}
+        </mat-option>
+
+
+  </mat-form-field>
