--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -1,1 +1,6 @@
-<p>movie-page works!</p>
+<mat-list>
+    <mat-list-item>{{movie?.id}}</mat-list-item>
+    <mat-list-item>{{movie?.title}}</mat-list-item>
+    <mat-list-item>{{movie?.overview}}</mat-list-item>
+    <mat-list-item>{{movie?.popularity}}</mat-list-item>
+  </mat-list>
