--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -1,6 +1,65 @@
-<mat-list>
-    <mat-list-item>{{movie?.id}}</mat-list-item>
-    <mat-list-item>{{movie?.title}}</mat-list-item>
-    <mat-list-item>{{movie?.overview}}</mat-list-item>
-    <mat-list-item>{{movie?.popularity}}</mat-list-item>
-  </mat-list>
+<ng-template #divLoading>
+  <mat-grid-list cols="1">
+    <mat-grid-tile>
+      <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+</ng-template>
+
+<div class="fondo" *ngIf="movie; else divLoading" class="grid p-2">
+  <mat-card class="col-12 sm:col-6">
+    <mat-card-header>
+      <mat-card-title>{{movie.title}}</mat-card-title>
+      <mat-card-subtitle>{{movie.original_title}}</mat-card-subtitle>
+    </mat-card-header>
+    <img [src]="movie | movieImage" alt="movie.title" mat-card-image>
+  </mat-card>
+
+  <mat-card class="col-12 sm:col-6">
+    <!-- <mat-card-header>
+      <mat-card-title>Información</mat-card-title>
+      <mat-card-subtitle>{{movie.superhero}}</mat-card-subtitle>
+    </mat-card-header> -->
+
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item>{{movie?.adult}}</mat-list-item>
+        <mat-list-item>{{movie?.backdrop_path}}</mat-list-item>
+        <mat-list-item>{{movie?.genre_ids}}</mat-list-item>
+        <mat-list-item>{{movie?.id}}</mat-list-item>
+        <mat-list-item>{{movie?.original_language}}</mat-list-item>
+        <mat-list-item>{{movie?.original_title}}</mat-list-item>
+        <mat-list-item>{{movie?.overview}}</mat-list-item>
+        <mat-list-item>{{movie?.popularity}}</mat-list-item>
+        <mat-list-item>{{movie?.poster_path}}</mat-list-item>
+        <mat-list-item>{{movie?.release_date}}</mat-list-item>
+        <mat-list-item>{{movie?.title}}</mat-list-item>
+        <mat-list-item>{{movie?.video}}</mat-list-item>
+      </mat-list>
+
+
+      <mat-card-content>
+        <button (click)="goBack()" color="primary" mat-raised-button>
+          <mat-icon>arrow_back</mat-icon>
+          Volver a la lista de héroes
+        </button>
+      </mat-card-content>
+
+
+    </mat-card-content>
+  </mat-card>
+
+
+
+
+</div>
+
+
+<style>
+  .fondo{
+    background-image: url();
+    background-size: cover; /* Ajusta la imagen al tamaño del elemento */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Agrega una sombra */
+  }
+</style>
