--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -26,7 +26,7 @@
               <td mat-cell *matCellDef="let usuario"> {{usuario.nombre_publico}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="rol">
+          <ng-container matColumnDef="id_rol">
               <th mat-header-cell *matHeaderCellDef>
                   <input matInput [formControl]="idRolFilter" placeholder="Rol">
                   <span mat-sort-header></span>
