--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -1,1 +1,8 @@
-<p>layout-page works!</p>
+<!-- Creamos un grid con padding 3 -->
+<div class="grid">
+    <!-- 12 columnas con margin top 5, para pantallas medianas 6 columnas con un espacio de 3 columnas y margin top 8,-->
+    <div class="col-12 mt-5 md:col-6 md:col-offset-3 md:mt-8">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  
