--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -24,7 +24,7 @@
 
     <mat-card-content>
       <mat-list>
-        <mat-list-item>{{movie?.adult}}</mat-list-item>
+        <!-- <mat-list-item>{{movie?.adult}}</mat-list-item>
         <mat-list-item>{{movie?.backdrop_path}}</mat-list-item>
         <mat-list-item>{{movie?.genre_ids}}</mat-list-item>
         <mat-list-item>{{movie?.id}}</mat-list-item>
@@ -35,7 +35,7 @@
         <mat-list-item>{{movie?.poster_path}}</mat-list-item>
         <mat-list-item>{{movie?.release_date}}</mat-list-item>
         <mat-list-item>{{movie?.title}}</mat-list-item>
-        <mat-list-item>{{movie?.video}}</mat-list-item>
+        <mat-list-item>{{movie?.video}}</mat-list-item> -->
       </mat-list>
 
 
