--- a/src/app/layout-page/layout-page.component.html
+++ b/src/app/layout-page/layout-page.component.html
@@ -27,10 +27,10 @@
         <mat-icon>menu</mat-icon>
       </button>
       <span class="spacer"></span>
-      <!-- <span>{{user?.usuario}}</span>
+      <span>{{user?.usuario}}</span>
       <button mat-button (click)="onLogout()">
         Logout
-      </button> -->
+      </button>
     </mat-toolbar>
 
     <div class="container p-2">
