--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,22 +1,32 @@
-<div class="flex flex-column">
-    <span class="text-lg mb-4">Login</span>
-  
-    <mat-form-field>
-      <mat-label>Usuario</mat-label>
-      <input type="text" matInput placeholder="Nombre de Usuario">
-    </mat-form-field>
-  
-    <mat-form-field>
-      <mat-label>Contraseña</mat-label>
-      <input type="password" matInput placeholder="Contraseña">
-    </mat-form-field>
-  
-    <button mat-button mat-flat-button color="primary" (click)="onLogin()">
-      <mat-icon>login</mat-icon>
-      Acceder
-    </button>
-  
-    <div class="flex justify-content-end mt-5">
-      <a routerLink="/auth/new-account">No tengo cuenta de usuario</a>
-    </div>
-  </div>
+<mat-card class="example-card">
+  <mat-card-header>
+      <mat-card-title>{{titulo}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+      <form class="example-form" [formGroup]="loginForm">
+          <div class="form-group">
+              <mat-form-field class="example-full-width">
+                  <input matInput class="form-control full-width-input" placeholder="Correo electrónico"
+                      formControlName="username" name="username" type="text" required>
+              </mat-form-field>
+          </div>
+          <div class="form-group">
+              <mat-form-field class="example-full-width">
+                  <input matInput class="form-control full-width-input" placeholder="Contraseña"
+                      formControlName="password" #input2 type="password" name="password" required>
+              </mat-form-field>
+          </div>
+          <mat-card-actions>
+              <button type="submit" mat-raised-button class="azulVeo" (click)="acceder()">Acceder</button>
+              <!-- <button type="button" mat-raised-button class="azulVeo" (click)="formularioRecuperacion = !formularioRecuperacion">
+                  Olvidé mi contraseña
+              </button> -->
+              <button type="button" mat-raised-button class="azulVeo" (click)="forgotPassword()">
+                  Olvidé mi contraseña
+              </button>
+          </mat-card-actions>
+      </form>
+      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+  </mat-card-content>
+  <mat-error *ngIf="error">{{alerta}}</mat-error>
+</mat-card>
