--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -31,7 +31,7 @@
                   <input matInput [formControl]="idRolFilter" placeholder="Rol">
                   <span mat-sort-header></span>
               </th>
-              <td mat-cell *matCellDef="let usuario"> {{usuario.id_rol}} </td>
+              <td mat-cell *matCellDef="let usuario"> {{usuario.rol}} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
