--- a/src/app/users/edit-user/edit-user.component.html
+++ b/src/app/users/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3 mat-dialog-title>Agregar nuevo Usuario</h3>
+    <h3 mat-dialog-title>Editar nuevo Usuario</h3>
 
     <form class="mat-dialog-content" [formGroup]="usuarioForm">
       <div class="form">
