--- a/src/app/layout-page/layout-page.component.html
+++ b/src/app/layout-page/layout-page.component.html
@@ -10,8 +10,16 @@
       </mat-toolbar>
 
       <mat-nav-list>
-        <ng-container *ngFor="let item of sidebarItems">
-          <ng-container *ngIf="esSuperadmin || item.label !== 'usuarios'">
+        <ng-container *ngIf="id_rol=='1'">
+          <ng-container  *ngFor="let item of sidebarItemsSuperAdmin">
+            <mat-list-item (click)="sidenav.toggle()" [routerLink]="item.url">
+              <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+              {{item.label}}
+            </mat-list-item>
+          </ng-container>
+        </ng-container>
+        <ng-container *ngIf="id_rol=='2'">
+          <ng-container  *ngFor="let item of sidebarItems">
             <mat-list-item (click)="sidenav.toggle()" [routerLink]="item.url">
               <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
               {{item.label}}
