--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -39,9 +39,9 @@
       </mat-list>
 
       <mat-card-content>
-        <button (click)="addFavourite()" color="primary" mat-raised-button>
+        <button (click)="favorito()" color="primary" mat-raised-button>
           <mat-icon>favorite</mat-icon>
-          
+
         </button>
       </mat-card-content>
 
