--- a/src/app/movies/components/card/card.component.html
+++ b/src/app/movies/components/card/card.component.html
@@ -2,7 +2,7 @@
   <img mat-card-image [src]="movie | movieImage" [alt]="movie.title">
 
   <mat-card-title class="truncate">
-    <span>{{movie.original_title}}</span>
+    <span>{{movie.title | puntitos : 15}}</span>
   </mat-card-title>
 
   <mat-divider></mat-divider>
