--- a/src/app/movies/pages/list-page/list-page.component.html
+++ b/src/app/movies/pages/list-page/list-page.component.html
@@ -4,10 +4,13 @@
 
   <div *ngFor="let movie of listaMovies"
     class="col-12 sm:col-4 md:col-3 xl:col-2">
-    <!-- <heroes-hero-card [movie]="movie"></heroes-hero-card> -->
     <movies-movie-card [routerLink]="['/movies',movie.id]" [movie]="movie">
     </movies-movie-card>
 
+  </div>
+
+  <div class="row justify-content-center">
+    <button mat-stroked-button color="primary" (click)="verMasPeliculas()" style="width: auto;">Cargar más resultados</button>
   </div>
 
 
