--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -12,15 +12,12 @@
           </div>
           <div class="form-group">
               <mat-form-field class="example-full-width">
-                  <input matInput class="form-control full-width-input" placeholder="Contraseña"
+                  <input #passwordInput matInput class="form-control full-width-input" placeholder="Contraseña"
                       formControlName="password" #input2 type="password" name="password" required>
               </mat-form-field>
           </div>
           <mat-card-actions>
               <button type="submit" mat-raised-button class="azulVeo" (click)="acceder()">Acceder</button>
-              <!-- <button type="button" mat-raised-button class="azulVeo" (click)="formularioRecuperacion = !formularioRecuperacion">
-                  Olvidé mi contraseña
-              </button> -->
               <button type="button" mat-raised-button class="azulVeo" (click)="forgotPassword()">
                   Olvidé mi contraseña
               </button>
