--- a/src/app/movies/pages/list-page/list-page.component.html
+++ b/src/app/movies/pages/list-page/list-page.component.html
@@ -1,17 +1,11 @@
-<h1>Listado de Peliculas</h1>
+<h1>Listado de Películas</h1>
 <mat-divider></mat-divider>
-<div class="grid mb-8">
-
-  <div *ngFor="let movie of listaMovies"
-    class="col-12 sm:col-4 md:col-3 xl:col-2">
-    <movies-movie-card [routerLink]="['/movies',movie.id]" [movie]="movie">
-    </movies-movie-card>
-
+<div class="movie-grid">
+  <div *ngFor="let movie of listaMovies" class="movie-card">
+    <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
   </div>
+</div>
 
-  <div class="row justify-content-center">
-    <button mat-stroked-button color="primary" (click)="verMasPeliculas()" style="width: auto;">Cargar más resultados</button>
-  </div>
-
-
+<div class="row justify-content-center">
+  <button mat-stroked-button color="primary" (click)="verMasPeliculas()" style="width: auto;">Cargar más resultados</button>
 </div>
