--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -7,10 +7,11 @@
           <div class="form-group">
               <mat-form-field class="example-full-width">
                   <input matInput class="form-control full-width-input" placeholder="Correo electrónico"
-                      formControlName="username" name="username" type="text" required>
+                      formControlName="username" name="username" type="text" required
+                      >
               </mat-form-field>
           </div>
-          <div class="form-group">
+          <div class="form-group" > <!-- Mostrar solo si mostrarContraseña es true -->
               <mat-form-field class="example-full-width">
                   <input #passwordInput matInput class="form-control full-width-input" placeholder="Contraseña"
                       formControlName="password" #input2 type="password" name="password" required>
