--- a/src/app/movies/components/card/card.component.html
+++ b/src/app/movies/components/card/card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <img mat-card-image [src]="movie | movieImage" [alt]="movie.title">
+  <img mat-card-image [src]="movie | movieImage" [alt]="movie.title" class="movie-poster">
 
   <mat-card-title class="truncate">
     <span>{{movie.title | puntitos : 25}}</span>
