--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -1,56 +1,65 @@
-<ng-template #divLoading>
-  <mat-grid-list cols="1">
-    <mat-grid-tile>
-      <mat-spinner></mat-spinner>
-    </mat-grid-tile>
-  </mat-grid-list>
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+</head>
+<div *ngIf="movie" class="movie-details-container">
 
-</ng-template>
+  <div class="movie-background-image" [style.background-image]="'linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'"></div>
+    <div class="movie-content">
 
-<div *ngIf="movie; else divLoading" class="grid p-2">
-  <mat-card class="col-12 sm:col-6">
-    <mat-card-header>
-      <mat-card-title>{{movie.title}}</mat-card-title>
-      <mat-card-subtitle>{{movie.original_title}}</mat-card-subtitle>
-    </mat-card-header>
-    <img [src]="movie | movieImage" alt="movie.title" mat-card-image>
-  </mat-card>
-
-  <mat-card class="col-12 sm:col-6">
-    <!-- <mat-card-header>
-      <mat-card-title>Información</mat-card-title>
-      <mat-card-subtitle>{{movie.superhero}}</mat-card-subtitle>
-    </mat-card-header> -->
-
-    <mat-card-content>
-      <mat-list>
-        <!-- <mat-list-item>{{movie?.adult}}</mat-list-item>
-        <mat-list-item>{{movie?.backdrop_path}}</mat-list-item>
-        <mat-list-item>{{movie?.genre_ids}}</mat-list-item>
-        <mat-list-item>{{movie?.id}}</mat-list-item>
-        <mat-list-item>{{movie?.original_language}}</mat-list-item>
-        <mat-list-item>{{movie?.original_title}}</mat-list-item>
-        <mat-list-item>{{movie?.overview}}</mat-list-item>
-        <mat-list-item>{{movie?.popularity}}</mat-list-item>
-        <mat-list-item>{{movie?.poster_path}}</mat-list-item>
-        <mat-list-item>{{movie?.release_date}}</mat-list-item>
-        <mat-list-item>{{movie?.title}}</mat-list-item>
-        <mat-list-item>{{movie?.video}}</mat-list-item> -->
-      </mat-list>
-
-      <button (click)="favorito()" color="primary" mat-raised-button>
-        <mat-icon>favorite</mat-icon>
-      </button>
-
-
-      <mat-card-content>
-        <button (click)="goBack()" color="primary" mat-raised-button>
-          <mat-icon>arrow_back</mat-icon>
-          Volver a la lista de héroes
-        </button>
-      </mat-card-content>
-
-
-    </mat-card-content>
-  </mat-card>
+      <img [src]="movie | movieImage" alt="movie.title" mat-card-image>
+  
+      <div class="movie-info">
+        <h1>{{ movie.title }}</h1>
+        <div class="argumento">
+          <p class="argumento-titulo">Argumento:</p>
+          <div class="resultados">
+            <p class="argumento-texto">{{ movie.overview }}</p>
+          </div>
+        </div>
+  
+        <!-- <div *ngIf="movie.genres.length > 0" class="chip-group">
+          <mat-chip style="font-size: 200px;">Genres</mat-chip>
+          <div class="resultados">
+            <span *ngFor="let genre of movieData.genres; let last = last">
+              {{ genre.name }}
+              <ng-container *ngIf="!last"> - </ng-container>
+            </span>
+          </div>
+        </div> -->
+  
+        <!-- <div *ngIf="movie.homepage" class="chip-group">
+          <mat-chip>Homepage</mat-chip>
+          <a [href]="movie.homepage" target="_blank" class="resultados">{{ movieData.homepage }}</a>
+        </div>
+  
+        <div *ngIf="movie.production_countries.length > 0" class="chip-group">
+          <mat-chip>Production Countries</mat-chip>
+          <div class="resultados">
+            <span *ngFor="let country of movie.production_countries; let last = last" class="chip-item">
+              {{ country.name }}
+              <ng-container *ngIf="!last"> - </ng-container>
+            </span>
+          </div>
+        </div> -->
+        <br>
+        <button (click)="favorito()" style="color:'{{ isFavorito ? 'warn' : 'primary' }}'" mat-icon-button>
+          <mat-icon>{{ isFavorito ? 'favorite' : 'favorite_border' }}</mat-icon>
+        </button> 
+      </div>
+    </div>
 </div>
+
+<div class="related-movies-container">
+  Peliculas relacionadas
+  <div class="flex flex-wrap movie-card-container">
+    <div *ngFor="let movie of listaMovie" class="movie-card">
+      <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie">hola</movies-movie-card>
+    </div>
+  </div>
+</div>
+<button mat-flat-button color="primary" (click)="goBack()">
+  <mat-icon>arrow_back</mat-icon>
+  Volver a la página principal
+</button>
