--- a/src/app/movies/pages/search-page/search-page.component.css
+++ b/src/app/movies/pages/search-page/search-page.component.css
@@ -1,6 +1,7 @@
 .search-and-movies-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center; 
+  flex-wrap: wrap; 
 }
 
 .movie-card {
