--- a/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.html
+++ b/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.html
@@ -42,7 +42,7 @@
 
 
 
-          <button mat-raised-button color="primary" (click)="borrarFavorito()" ><mat-icon>delete</mat-icon></button>
+          <button mat-raised-button color="primary" (click)="borrarFavorito(movie.id)" ><mat-icon>delete</mat-icon></button>
         </mat-card-content>
       </mat-card>
 </div>
