--- a/src/app/movies/pages/search-page/search-page.component.html
+++ b/src/app/movies/pages/search-page/search-page.component.html
@@ -1,20 +1,24 @@
 <div class="search-and-movies-container">
-  <div class="flex flex-wrap p-2">
-    <h3>Buscador</h3>
-    <mat-form-field class="full-width">
-      <mat-label>Buscador de Películas</mat-label>
-      <input
-        type="search"
-        matInput
-        [formControl]="searchInput"
-        (keydown.enter)="searchMovie()"
-      >
-    </mat-form-field>
+  <div class="search-container">
+    <div class="flex flex-wrap p-2 full-width">
+      <h3>Buscador</h3>
+      <mat-form-field class="full-width">
+        <mat-label>Buscador de Películas</mat-label>
+        <input
+          type="search"
+          matInput
+          [formControl]="searchInput"
+          (keydown.enter)="searchMovie()"
+        >
+      </mat-form-field>
+    </div>
   </div>
 
-  <div class="flex flex-wrap movie-card-container">
-    <div class="movie-card" *ngFor="let movie of peliculas">
-      <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
+  <div class="movies-container">
+    <div class="flex flex-wrap movie-card-container">
+      <div class="movie-card" *ngFor="let movie of peliculas">
+        <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
+      </div>
     </div>
   </div>
 </div>
