--- a/src/app/layout-page/layout-page.component.html
+++ b/src/app/layout-page/layout-page.component.html
@@ -21,7 +21,7 @@
         <ng-container *ngIf="id_rol=='2'">
           <ng-container  *ngFor="let item of sidebarItems">
             <mat-list-item (click)="sidenav.toggle()" [routerLink]="item.url">
-              <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+              <mat-icon matListItemIcon style="color: #F5C518;">{{item.icon}}</mat-icon>
               {{item.label}}
             </mat-list-item>
           </ng-container>
@@ -36,8 +36,8 @@
       </button>
       <span class="spacer"></span>
       <span>{{nombre_publico}}</span>
-      <button mat-button (click)="onLogout()">
-        Logout
+      <button mat-button (click)="onLogout()" class="logout">
+        <strong style="color:black;">Logout</strong> 
       </button>
     </mat-toolbar>
 
