--- a/src/app/movies/pages/list-page/list-page.component.css
+++ b/src/app/movies/pages/list-page/list-page.component.css
@@ -1,12 +1,31 @@
+.center-container {
+  display: flex;
+  justify-content: center;
+}
+
 .movie-grid {
+  max-width: 1000px; /* Establece el ancho máximo */
+  width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Crea columnas automáticas */
   grid-gap: 20px; /* Espacio entre las películas */
 }
 
 .movie-card {
-  flex: 0 0 20%; /* Ajusta el ancho según tus necesidades */
-  padding: 10px; /* Ajusta el espaciado entre las tarjetas según tus necesidades */
-  box-sizing: border-box; /* Incluye el padding en el ancho total del contenedor */
-  margin-top: 10px; /* Ajusta el margen superior según sea necesario */
+  padding: 0; 
+  margin: 0; 
+}
+
+/* Ajusta el tamaño de la imagen dentro del card */
+.movie-card img {
+  width: 100%; /* Ajusta la imagen para que ocupe todo el ancho del card */
+  height: auto; /* Permite que la altura de la imagen se ajuste automáticamente */
+}
+
+/* Ajusta el estilo del título para que se muestre correctamente */
+.movie-card-title {
+  /* Puedes ajustar el estilo del título según tus preferencias */
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 5px; /* Agrega espacio superior al título */
 }
