--- a/src/app/movies/pages/list-page/list-page.component.html
+++ b/src/app/movies/pages/list-page/list-page.component.html
@@ -1,8 +1,10 @@
 <h1>Listado de Películas</h1>
 <mat-divider></mat-divider>
-<div class="flex flex-wrap movie-card-container">
-  <div *ngFor="let movie of listaMovies" class="movie-card">
-    <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
+<div class="center-container">
+  <div class="movie-grid">
+    <div *ngFor="let movie of listaMovies" class="movie-card">
+      <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
+    </div>
   </div>
 </div>
 
