--- a/src/app/movies/components/card/card.component.html
+++ b/src/app/movies/components/card/card.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <img mat-card-image [src]="movie | movieImage" [alt]="movie.title" class="movie-poster">
 
-  <mat-card-title class="truncate">
+  <mat-card-title>
     <span>{{movie.title | puntitos : 25}}</span>
   </mat-card-title>
 
