--- a/src/app/movies/pages/movie-page/movie-page.component.css
+++ b/src/app/movies/pages/movie-page/movie-page.component.css
@@ -1,127 +1,152 @@
-.chip-group a {
-  color: antiquewhite;
-}
 
-.movie-details-container {
-  position: relative;
-  width: 100%;
-  height: 700px;
-  overflow: hidden;
-  margin: 0 auto;
+body {
+  background: #e2e2e2;
+  width: 98%;
+  height: 100vh;
 }
-
-.movie-background-image {
+body .card {
+  width: 800px;
+  height: 400px;
+  background: transparent;
   position: absolute;
-  border-radius: 40px;
-  top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  filter: brightness(0.7);
-  /* opacity: 0.3; Ajusta la opacidad de la imagen de fondo */
-  z-index: -1; /* Asegura que la imagen de fondo esté detrás de otros elementos */
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
+}
+body .card_left {
+  width: 40%;
+  height: 400px;
+  float: left;
   overflow: hidden;
-  mask-image: linear-gradient(to top, transparent 1%, rgb(35, 35, 35)); /* Máscara para difuminar la parte inferior */
+  background: transparent;
 }
-
-.movie-content {
-  width: 90%;
+body .card_left img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px 0 0 10px;
+  -webkit-border-radius: 10px 0 0 10px;
+  -moz-border-radius: 10px 0 0 10px;
   position: relative;
-  z-index: 1; /* Asegura que el contenido esté delante de la imagen de fondo */
-  display: flex;
-  align-items: center;
-  /* justify-content: space-between; */
-  box-sizing: border-box;
-  height: 100%;
 }
-
-.movie-poster {
-  margin-left: 80px;
-  width: auto;
-  height: 100%;
-  max-height: 85%; /* Ajusta el tamaño máximo de la imagen de la película */
-  object-fit: contain; /* Ajusta cómo se ajusta la imagen dentro de su contenedor */
-  margin-right: 20px; /* Espacio entre la imagen de la película y la información */
-  box-shadow: -12px 12px 12px rgba(12, 12, 12, 5);
+body .card_right {
+  width: 60%;
+  float: left;
+  background: #000000;
+  height: 400px;
+  border-radius: 0 10px 10px 0;
+  -webkit-border-radius: 0 10px 10px 0;
+  -moz-border-radius: 0 10px 10px 0;
 }
-
-.movie-info {
-  /* max-height: 500px; */
-  font-size: 18px;
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0;
+body .card_right h1 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  text-align: left;
+  font-size: 40px;
+  margin: 30px 0 0 0;
+  padding: 0 0 0 40px;
+  letter-spacing: 1px;
 }
-
-.movie-info button {
-  margin-bottom: 10px; /* Reduce el margen inferior entre los botones */
+body .card_right__details ul {
+  list-style-type: none;
+  padding: 0 0 0 40px;
+  margin: 10px 0 0 0;
 }
-
-.movie-info h1 {
-  font-size: 70px;
-  line-height: 0.9;
-  font-family: 'Bebas Neue', sans-serif;
+body .card_right__details ul li {
+  display: inline;
+  color: #e3e3e3;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 0 40px 0 0;
 }
-
-.chip-group {
-  display: flex;
-  flex-wrap: wrap; /* Permite que los chips se envuelvan si no hay suficiente espacio */
-  align-items: center;
-  margin-bottom: 10px; /* Ajusta el espacio entre los grupos de chips */
+body .card_right__rating__stars {
+  position: relative;
+  right: 160px;
+  margin: 10px 0 10px 0;
+  /***** CSS Magic to Highlight Stars on Hover *****/
+  /* hover previous stars in list */
 }
-
-.chip-group span {
-  margin-right: 2px;
+body .card_right__rating__stars fieldset,
+body .card_right__rating__stars label {
+  margin: 0;
+  padding: 0;
 }
-
-.resultados {
-  margin-left: 15px;
-  line-height: 1.5;
+body .card_right__rating__stars .rating {
+  border: none;
 }
-
-.chip-item {
-  margin-right: 0px; /* Ajusta el espacio entre los chips */
+body .card_right__rating__stars .rating > input {
+  display: none;
 }
-
-.chip-item:last-child {
-  margin-right: 0; /* Elimina el margen derecho del último chip */
+body .card_right__rating__stars .rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  display: inline-block;
+  content: "";
+  font-family: FontAwesome;
 }
-
-button.mat-icon-button {
-  border-radius: 50%; /* Hace que el botón tenga forma de círculo */
-  width: 40px; /* Establece el ancho del botón */
-  height: 40px; /* Establece la altura del botón */
-  min-width: 0; /* Elimina el ancho mínimo */
-}
-
-.favorite-button-raised {
-  background-color: primary;
-}
-
-.favorite-button-stroked {
-  background-color: transparent;
-  border-color: primary;
-}
-.related-movies-container {
+body .card_right__rating__stars .rating > .half:before {
+  content: "";
   position: absolute;
-  top: 100%; /* Coloca el contenedor justo debajo del contenedor principal */
-  width: 100%; /* Ocupa todo el ancho disponible */
-  padding: 20px; /* Ajusta el espaciado */
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+}
+body .card_right__rating__stars .rating > label {
+  color: #ddd;
+  float: right;
+}
+body .card_right__rating__stars .rating > input:checked ~ label,
+body .card_right__rating__stars .rating:not(:checked) > label:hover,
+body .card_right__rating__stars .rating:not(:checked) > label:hover ~ label {
+  color: #ffd700;
+}
+body .card_right__rating__stars .rating > input:checked + label:hover,
+body .card_right__rating__stars .rating > input:checked ~ label:hover,
+body .card_right__rating__stars .rating > label:hover ~ input:checked ~ label,
+body .card_right__rating__stars .rating > input:checked ~ label:hover ~ label {
+  color: #ffed85;
+}
+body .card_right__review {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  padding: 0 40px 0 40px;
+  letter-spacing: 1px;
+  margin: 10px 0 10px 0;
+  line-height: 20px;
 }
 
-.argumento {
-  margin-top: 20px; /* Ajusta el margen superior del argumento */
+body .card_right__button {
+  padding: 0 0 0 40px;
+  margin: 30px 0 0 0;
 }
-
-.argumento-titulo {
-  font-weight: bold; /* Hace que el título del argumento sea negrita */
-  font-size: 20px; /* Ajusta el tamaño del título del argumento */
+body .card_right__button a {
+  color: #ffda00;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #ffda00;
+  padding: 10px 10px 10px 40px;
+  font-size: 12px;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/COMdoWZ.png);
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: 7% 50%;
+  border-radius: 5px;
+  transition-property: all;
+  transition-duration: 0.5s;
 }
-
-.argumento-texto {
-  font-size: 18px; /* Ajusta el tamaño del texto del argumento */
-  line-height: 1.5; /* Ajusta la altura de línea del texto del argumento */
+body .card_right__button a:hover {
+  color: #000000;
+  background-color: #ffda00;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/rFQ5dHA.png);
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: 10% 50%;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 0.5s;
 }
