--- a/src/app/movies/pages/search-page/search-page.component.css
+++ b/src/app/movies/pages/search-page/search-page.component.css
@@ -1,25 +1,8 @@
-.search-and-movies-container {
-  display: flex;
-  justify-content: center; 
-  flex-wrap: wrap; 
+.movies-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-
-.search-container, .movies-container {
-  width: 100%; 
-  max-width: 1200px; 
-  margin: 0 auto; 
-}
-
-.search-container {
-  max-width: 600px; /* Establece un ancho máximo para el contenedor del buscador */
-}
-
-/* .movie-card {
-  flex: 0 0 calc(25% - 20px); 
-  padding: 10px;
-  box-sizing: border-box;
-  margin-top: 10px;
-} */
 
 .full-width {
   width: 100%; /* Asegura que los elementos ocupen el ancho completo */
