--- a/src/app/movies/pages/search-page/search-page.component.html
+++ b/src/app/movies/pages/search-page/search-page.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: black; height: auto;">
+<body>
   <div>
     <h3>Buscador</h3>
     <mat-form-field class="full-width">
@@ -20,4 +20,4 @@
     </div>
   </div>
 
-</div>
+</body>
