--- a/src/app/movies/pages/movie-page/movie-page.component.html
+++ b/src/app/movies/pages/movie-page/movie-page.component.html
@@ -1,9 +1,4 @@
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-</head>
-<body *ngIf="movie">
+<!-- <body *ngIf="movie">
   <div class='card'>
     <div class='card_left'>
       <img [src]="movie | movieImage" alt="movie.title" mat-card-image>
@@ -15,7 +10,10 @@
           <li>{{movie.release_date | slice: 0:4}}</li>
           <li>{{movie.runtime}} min</li>
           <li>
-            <span *ngFor="let genre of movie.genres; let i = index;">{{genre.name}} </span>
+            <ng-container *ngFor="let genre of movie.genres; let i = index;">
+              <span>{{genre.name}}</span>
+              <span *ngIf="i !== movie.genres.length - 1"> - </span>
+            </ng-container>
           </li>
           <li *ngIf="movie.adult; else notAdult">18</li>
           <ng-template #notAdult>
@@ -23,99 +21,38 @@
           </ng-template>
         </ul>
         <div class='card_right__review'>
-          {{movie.overview}}
+          {{movie.overview | puntitos:500}}
         </div>
-      </div>
-    </div>
-  </div>
-</body>
-
-
-<div class="related-movies-container">
-  Peliculas relacionadas
-  <div class="flex flex-wrap movie-card-container">
-    <div *ngFor="let movie of listaMovie" class="movie-card">
-      <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card>
-    </div>
-  </div>
-</div>
-<button mat-flat-button  (click)="goBack()" style="background-color: #F5C518;">
-  <mat-icon>arrow_back</mat-icon>
-  <strong style="color:black;">Volver a la página principal</strong>
-</button>
-
-
-
-<!-- <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-</head>
-<div *ngIf="movie" class="movie-details-container">
-
-  <div class="movie-background-image" [style.background-image]="'linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'"></div>
-    <div class="movie-content">
-
-      <img [src]="movie | movieImage" alt="movie.title" mat-card-image>
-      <div class="movie-info">
-        <h1>{{ movie.title }}</h1>
-        <div class="argumento">
-          <p class="argumento-titulo">Argumento:</p>
-          <div class="resultados">
-            <p class="argumento-texto">{{ movie.overview }}</p>
-          </div>
-        </div>
-        <mat-list>
-          <mat-list-item *ngIf="movie.adult; else notAdult">Película para adultos</mat-list-item>
-          <ng-template #notAdult>
-            <mat-list-item>Película para todos los públicos</mat-list-item>
-          </ng-template>
-          <mat-list-item>{{ movie.release_date | slice:0:4 }}</mat-list-item>
+        <div class="favStar">
+          <button (click)="favorito()" [color]="!isFavorito ? 'primary' : 'warn' " mat-icon-button>
+            <mat-icon>{{ isFavorito ? 'favorite' : 'favorite_border' }}</mat-icon>
+          </button>
           <mat-list-item class="icon-and-text">
-            <mat-icon matListItemIcon style="color: #F5C518;">star</mat-icon>{{movie!.vote_average}}
+            <mat-icon matListItemIcon style="color: #F5C518;">star</mat-icon><strong style="color: white;">{{movie!.vote_average}}</strong>
           </mat-list-item>
-        </mat-list>
-         <div *ngIf="movie.genres.length > 0" class="chip-group">
-          <mat-chip style="font-size: 200px;">Genres</mat-chip>
-          <div class="resultados">
-            <span *ngFor="let genre of movie.genres; let last = last">
-              {{ genre.name }}
-              <ng-container *ngIf="!last"> - </ng-container>
-            </span>
-          </div>
-          </div>
-
-         <div *ngIf="movie.homepage" class="chip-group">
-          <mat-chip>Homepage</mat-chip>
-          <a [href]="movie.homepage" target="_blank" class="resultados">{{ movie.homepage }}</a>
         </div>
-
-        <div *ngIf="movie.production_countries.length > 0" class="chip-group">
-          <mat-chip>Production Countries</mat-chip>
-          <div class="resultados">
-            <span *ngFor="let country of movie.production_countries; let last = last" class="chip-item">
-              {{ country.name }}
-              <ng-container *ngIf="!last"> - </ng-container>
-            </span>
-          </div>
-        </div>
-        <br>
-        <button (click)="favorito()" [color]="!isFavorito ? 'primary' : 'warn' " mat-icon-button>
-          <mat-icon>{{ isFavorito ? 'favorite' : 'favorite_border' }}</mat-icon>
+        <button mat-flat-button class="back" (click)="goBack()" style="background-color: #F5C518; margin-left: 40px;">
+          <mat-icon>arrow_back</mat-icon>
+          <strong style="color:black;">Volver a la página principal</strong>
         </button>
       </div>
     </div>
-</div>
-
-<div class="related-movies-container">
-  Peliculas relacionadas
-  <div class="flex flex-wrap movie-card-container">
-    <div *ngFor="let movie of listaMovie" class="movie-card">
-      <movies-movie-card [routerLink]="['/movies', movie.id]" [movie]="movie">hola</movies-movie-card>
-    </div>
   </div>
-</div>
-<button mat-flat-button  (click)="goBack()" style="background-color: #F5C518;">
-  <mat-icon>arrow_back</mat-icon>
-  <strong style="color:black;">Volver a la página principal</strong>
-</button> -->
+  <div class="related-movies-container">
+    <h2>Películas relacionadas</h2>
+    <div class="flex flex-wrap movie-card-container">
+      <div *ngFor="let movie of listaMovie.slice(indice, indice + 5)" class="movie-card">
+        <movies-movie-card-tiny [routerLink]="['/movies', movie.id]" [movie]="movie"></movies-movie-card-tiny>
+      </div>
+    </div>
+    <button (click)="mostrarAnteriores()" [disabled]="indice === 0">&#8592; Anteriores</button>
+    <button (click)="mostrarSiguientes()" [disabled]="indice >= listaMovie.length - 5">Siguientes &#8594;</button>
+  </div>
+</body> -->
+
+<iframe [src]="getCurrentVideoUrl()" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+<button (click)="playNext()">Siguiente</button>
+<button (click)="playBefore()">Anterior</button>
+
+
+
