--- a/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.css
+++ b/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.css
@@ -1,30 +1,51 @@
 .movie-info-container {
-    display: flex;
-    align-items: center; /* Centra verticalmente los elementos */
-  }
+  display: flex;
+  align-items: center; 
+  color: white;
+}
 
 .movie-image {
-width: 100px; /* Establece un ancho fijo para la imagen */
-height: auto; /* Permite que la altura se ajuste automáticamente para mantener la proporción */
-margin-right: 20px; /* Agrega espacio a la derecha de la imagen */
+  width: 100px; 
+  height: auto; 
+  margin-right: 20px; 
 }
 .button-container {
-display: flex;
-flex-direction: column; /* Coloca los botones en una disposición vertical */
-margin-top: 10px; /* Ajusta el margen superior entre los botones */
+  display: flex;
+  flex-direction: column; 
+  margin-top: 10px; 
 }
-
-/* Estilos adicionales para los botones si lo necesitas */
 .button-container button {
-margin-bottom: 5px; /* Ajusta el margen inferior entre los botones */
+  margin-bottom: 5px; 
+  background-color: #F5C518;
+  color: black;
 }
 
-
+.mdc-list-item__primary-text {
+  color: white;
+}
 .icon-and-text {
   display: flex;
-  align-items: center; /* Alinea verticalmente los elementos */
+  align-items: center;
 }
 
 .icon-and-text mat-icon {
-  margin-right: 5px; /* Ajusta el margen derecho para acercar el icono al texto */
+  margin-right: 5px; 
 }
+
+.grid {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  background-color: black;
+}
+
+mat-card{
+  background-color: rgb(51, 46, 46);
+}
+
+.mdc-list-item__primary-text{
+  color: white;
+}
+
+
+
