--- a/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.html
+++ b/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.html
@@ -1,43 +1,35 @@
 <ng-template #divLoading>
-    <mat-grid-list cols="1">
-      <mat-grid-tile>
-        <mat-spinner></mat-spinner>
-      </mat-grid-tile>
-    </mat-grid-list>
+  <mat-grid-list cols="1">
+    <mat-grid-tile>
+      <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
+</ng-template>
 
-  </ng-template>
-
-  <div *ngFor="let movie of peliculas_favoritas" class="grid p-2">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>{{movie.title}}</mat-card-title>
-        <mat-card-subtitle>{{movie.original_title}}</mat-card-subtitle>
-      </mat-card-header>
-      <div class="movie-info-container">
-        <img [src]="movie | movieImage" alt="movie.title" mat-card-image class="movie-image">
-        <mat-card-content>
-          <mat-list>
-            <mat-list-item *ngIf="movie.adult; else notAdult">Película para adultos</mat-list-item>
-            <ng-template #notAdult>
-              <mat-list-item>Película para todos los públicos</mat-list-item>
-            </ng-template>
-            <mat-list-item>{{ movie.release_date | slice:0:4 }}</mat-list-item>
-            <mat-list-item class="icon-and-text">
-              <mat-icon matListItemIcon style="color: #F5C518;">star</mat-icon>{{movie?.vote_average}}
-            </mat-list-item>
-          </mat-list>
-        </mat-card-content>
-        <div class="button-container">
-          <button mat-raised-button color="primary" (click)="borrarFavorito(movie.id)"><mat-icon>delete</mat-icon></button>
-          <button mat-raised-button color="primary" [routerLink]="['/movies', movie.id]">Info</button>
-        </div>
+<div *ngFor="let movie of peliculas_favoritas" class="grid p-2">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>{{movie.title}}</mat-card-title>
+      <mat-card-subtitle>{{movie.original_title}}</mat-card-subtitle>
+    </mat-card-header>
+    <div class="movie-info-container">
+      <img [src]="movie | movieImage" alt="movie.title" mat-card-image class="movie-image">
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item *ngIf="movie.adult; else notAdult">Película para adultos</mat-list-item>
+          <ng-template #notAdult>
+            <mat-list-item>Película para todos los públicos</mat-list-item>
+          </ng-template>
+          <mat-list-item>{{ movie.release_date | slice:0:4 }}</mat-list-item>
+          <mat-list-item class="icon-and-text">
+            <mat-icon matListItemIcon style="color: #F5C518;">star</mat-icon>{{movie?.vote_average}}
+          </mat-list-item>
+        </mat-list>
+      </mat-card-content>
+      <div class="button-container">
+        <button mat-raised-button (click)="borrarFavorito(movie.id)"><mat-icon>delete</mat-icon></button>
+        <button mat-raised-button [routerLink]="['/movies', movie.id]">Info</button>
       </div>
-    </mat-card>
-  </div>
-
-
-
-
-
-
-
+    </div>
+  </mat-card>
+</div>
