--- a/src/app/movies/pages/movie-page/movie-page.component.css
+++ b/src/app/movies/pages/movie-page/movie-page.component.css
@@ -72,6 +72,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 0 -10px;
 }
 
 .movie-card {
@@ -107,3 +108,22 @@ body {
 .icon-and-text mat-icon {
   margin-right: 5px;
 }
+.ant-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent; 
+  border: none; 
+  cursor: pointer; 
+}
+
+.anteriores-btn {
+  left: 0;
+  margin-left: 5px; 
+}
+
+.siguientes-btn {
+  right: 0;
+  margin-right: 5px; 
+}
+
