--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,67 +1,42 @@
-<div class="example-container mat-elevation-z8" >
-  <div class="example-table-container">
-      <table mat-table id="table" [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-          <ng-container matColumnDef="id_usuario">
-              <th mat-header-cell *matHeaderCellDef>
-                  <input matInput [formControl]="idUsuarioFilter" placeholder="Id">
-                  <span mat-sort-header></span>
-              </th>
-              <td mat-cell *matCellDef="let usuario"> {{usuario.id_usuario}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="usuario">
-              <th mat-header-cell *matHeaderCellDef>
-                  <input matInput [formControl]="usuarioFilter" placeholder="Usuario">
-                  <span mat-sort-header></span>
-              </th>
-              <td mat-cell *matCellDef="let usuario"> {{usuario.usuario}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="nombre_publico">
-              <th mat-header-cell *matHeaderCellDef>
-                  <input matInput [formControl]="nombrePublicoFilter" placeholder="Nombre Publico">
-                  <span mat-sort-header></span>
-              </th>
-              <td mat-cell *matCellDef="let usuario"> {{usuario.nombre_publico}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="id_rol">
-              <th mat-header-cell *matHeaderCellDef>
-                  <input matInput [formControl]="idRolFilter" placeholder="Rol">
-                  <span mat-sort-header></span>
-              </th>
-              <td mat-cell *matCellDef="let usuario"> {{usuario.rol}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef>
-                  <button id="addUsuario" mat-icon-button *ngIf="permises.add" (click)="addUsuario()">
-                      <mat-icon>
-                          add_circle
-                      </mat-icon>
-                  </button>
-              </th>
-              <td mat-cell *matCellDef="let usuario">
-                  <button id="editUsuario" mat-icon-button *ngIf="permises.edit" (click)="editUsuario(usuario)">
-                      <mat-icon>
-                          mode_edit
-                      </mat-icon>
-                  </button>
-                  <button id="deleteUsuario" mat-icon-button *ngIf="permises.delete" (click)="deleteUsuario(usuario)">
-                      <mat-icon>
-                          delete
-                      </mat-icon>
-                  </button>
-              </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+<div class="card">
+  <div class="card-header">
+    <h2>Usuarios</h2>
   </div>
-
-  <button (click)="goBack()">Volver a la pagina principal</button>
-  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
-
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>ID Usuario</th>
+            <th>Usuario</th>
+            <th>Nombre Público</th>
+            <th>Rol</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let usuario of listaUsuario">
+            <td>{{usuario.id_usuario}}</td>
+            <td>{{usuario.usuario}}</td>
+            <td>{{usuario.nombre_publico}}</td>
+            <td>{{usuario.id_rol}}</td>
+            <td>
+              <button mat-icon-button *ngIf="permises.add" (click)="addUsuario()">
+                <mat-icon style="color: black; background-color: #F5C518;">add_circle</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="permises.edit" (click)="editUsuario(usuario)">
+                <mat-icon style="color: black; background-color: #F5C518;">mode_edit</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="permises.delete" (click)="deleteUsuario(usuario)">
+                <mat-icon style="color: black; background-color: #F5C518;">delete</mat-icon>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="card-footer">
+    <button class="btn btn-primary" (click)="goBack()">Volver a la página principal</button>
+  </div>
 </div>
